# dithers

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  justfile
.github/workflows/: ci.yml  release.yml
src/: args.rs  dither.rs  lib.rs  main.rs  palette.rs
tests/: dither_integration_tests.rs
